# goodreads-sh

./: .gitignore  .travis.yml  API_DESIGN.md  Cargo.toml  Pipfile  README.md  appveyor.yaml  appveyor.yml  example_oauth1.py
src/: actions.rs  api_client.rs  lib.rs  main.rs  models.rs  ux.rs
src/api_responses/: user_shelves_resp.xml
