[package]
name = "goodreads-sh"
version = "0.1.0"
authors = ["Jonathon Belotti <jonathon.bel.melbourne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9.3"
dirs = "2.0.1"
structopt = "0.2.10"
