[package]
name = "goodreads-sh"
version = "0.1.0"
authors = ["Jonathon Belotti <jonathon.bel.melbourne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
config = "0.9.3"
dirs = "2.0.1"
#oauth2 = "3.0.0-alpha.2"
oauth1 = { git = "https://github.com/mehcode/oauth1-rs", branch = "master" }
rand = "0.7.0"
reqwest = "0.9.18"
structopt = "0.2.10"
url = "1.7.2"
