[package]
name = "goodreads-sh"
version = "0.1.0"
authors = ["Jonathon Belotti <jonathon.bel.melbourne@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
config = "0.9.3"
dirs = "2.0.1"
oauth1 = { git = "https://github.com/mehcode/oauth1-rs", branch = "master" }
oauth-client = "0.3"
rand = "0.7.0"
regex = "1"
reqwest = "0.9.18"
roxmltree = "0.6.1"
serde = "1.0.94"
structopt = "0.2.10"
toml = "0.5.1"
url = "1.7.2"
